# gakuran-discord-bot

./: .gitignore  Cargo.toml  flake.nix  result
.sqlx/: query-0cfdf48d360c37213988e376454f08124c9a078f71d3371f85972ac6ee3494be.json  query-0e08ebf4e8c2a335c93d303b84672c3c1ed07025ca596da72766d6a65824d1ea.json  query-10bb998361bfa5d6511f72b484a71ded96f2d0e9036714f86d35767dc6375712.json  query-11fad03e549c1875958a10a9d206aa91b4cf9e325526a4c7ef7ab107812d8519.json  query-16e68c3f0866372cc45fb3d86e2cd29e4a8489db5bce51c31323db07aeefb358.json  query-23d682038d1afe2676e514d2980c0a764bc5588fb17829cb770c373dc929ce3f.json  query-289b3ae6d3c74486c5c0f508c7e6ae30e313558f4c4a6adb154426e0ba0d1ed3.json  query-574ccc7e5707b311ccf645d41f5258de8f5e0729a45b50193658070d4e13ab4b.json  query-579f275cbc908dd9ed2baf970ecb3a8a965a900e19175dd0df219d701f1dce12.json  query-5a857a46985eb6a2d1a731fc0c56801c932849c9013b9d72a77db418afcf9f61.json  query-620b02681c15492c1c829d1d688eaf5f75c90fd64b8e923d0105586ae616c950.json  query-6e2ac6b090f1ef339f88627b6e8fc2e776e50cf91052312e42cad6b3bf3f432f.json  query-75932beab0821ad4fefc860d014e039e0252c0f421a5b23c556b4ea7c24fb52f.json  query-7c3f3dafbae83bb54d0449f6f49848c5108bc378ea688c524c6ab70e5bd2f75e.json  query-7deccfc7df0dedf30486f98962ff1ebd8976367637cb0610dde93c51a5beec2c.json  query-83ecfc26a7982781ebe002f67d1a85f2140bf4fb2e95582dfb53030ba62933d2.json  query-8c9b4e9d79a385c5e92b294f56ef8799ef5dd7ea38dd1360a6cb76f7570240ce.json  query-95f6100b98413ce04f7fb2691295e66c779b2bc210e8b0726b71adc0518200a8.json  (+16 more)
migrations/: 0001_init.sql  0003_schema_cleanup.sql  (+3 more)
(+37 files in other folders)
